--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "^12.1.4",
+    "@capacitor/android": "3.1.2",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.1.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic-native/call-number": "^5.35.0",
+    "@ionic-native/core": "^5.35.0",
+    "@ionic-native/email-composer": "^5.35.0",
     "@ionic-native/firebase": "^5.34.0",
+    "@ionic-native/in-app-browser": "^5.35.0",
     "@ionic/angular": "^5.5.2",
     "call-number": "^1.0.1",
+    "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "firebase": "^8.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -53,6 +59,14 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email": "^1.2.7",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -71,5 +85,21 @@
     "web-vitals": "^2.1.0",
     "webpack": "^5.44.0",
     "webpack-dev-server": "*"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-email": {},
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-inappbrowser": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
