--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "^12.2.2",
-    "@capacitor/android": "^3.2.0",
+    "@capacitor/android": "^3.3.2",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "^3.2.0",
+    "@capacitor/core": "^3.3.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
+    "@capacitor/splash-screen": "^1.1.6",
     "@capacitor/status-bar": "1.0.2",
     "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.35.0",
@@ -44,6 +45,7 @@
     "firebase": "^8.8.1",
     "form-data": "^4.0.0",
     "ionic": "^5.4.16",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -54,11 +56,11 @@
     "@angular-eslint/eslint-plugin": "~12.0.0",
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "^12.2.2",
+    "@angular/cli": "12.2.13",
     "@angular/compiler": "^12.1.5",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "^3.1.2",
+    "@capacitor/cli": "^3.3.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
