--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "^3.3.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
+    "@capacitor/share": "^1.0.7",
     "@capacitor/splash-screen": "^1.1.6",
     "@capacitor/status-bar": "1.0.2",
     "@ionic-native/call-number": "^5.35.0",
@@ -32,15 +33,17 @@
     "@ionic-native/document-viewer": "^5.35.0",
     "@ionic-native/email-composer": "^5.36.0",
     "@ionic-native/file": "^5.35.0",
-    "@ionic-native/file-transfer": "^5.35.0",
+    "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/firebase": "^5.34.0",
     "@ionic-native/in-app-browser": "^5.35.0",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^5.6.14",
     "call-number": "^1.0.1",
     "cordova": "^10.0.0",
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "firebase": "^8.8.1",
     "form-data": "^4.0.0",
@@ -69,12 +72,13 @@
     "@typescript-eslint/parser": "4.16.1",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -87,6 +91,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "mx.ferreyra.callnumber": "^0.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4",
@@ -106,10 +111,16 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      }
+      },
+      "call-number": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
