--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -6,12 +6,7 @@
 	"cordova": {
 		"preferences": {
 			"ScrollEnabled": "false",
-			"BackupWebStorage": "none",
-			"SplashMaintainAspectRatio": "true",
-			"FadeSplashScreenDuration": "300",
-			"SplashShowOnlyFirstTime": "false",
-			"SplashScreen": "screen",
-			"SplashScreenDelay": "3000"
+			"BackupWebStorage": "none"
 		}
 	}
 }
